--- a/index.html
+++ b/index.html
@@ -4,14 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Website</title>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <title>Roblox Vibe Game</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
   </head>
   <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#game">Game</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
     <main>
-        <h1>Hello frog</h1>  
+      <section id="home">
+        <h1>Welcome to Roblox Vibe Game</h1>
+        <p>Experience the ultimate gaming vibe</p>
+        <button id="startGame">Start Game</button>
+      </section>
+      <section id="game">
+        <canvas id="gameCanvas"></canvas>
+      </section>
+      <section id="about">
+        <h2>About Us</h2>
+        <p>We create immersive and engaging game experiences.</p>
+      </section>
+      <section id="contact">
+        <h2>Contact Us</h2>
+        <form id="contactForm">
+          <label for="name">Name:</label>
+          <input type="text" id="name" name="name" required>
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email" required>
+          <label for="message">Message:</label>
+          <textarea id="message" name="message" required></textarea>
+          <button type="submit">Send</button>
+        </form>
+      </section>
     </main>
-	<script src="index.js"></script>
+    <footer>
+      <p>&copy; 2024 Roblox Vibe Game. All rights reserved.</p>
+    </footer>
+    <script src="index.js"></script>
   </body>
 </html>
