--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Roblox Game</title>
+    <title>Roblox Vibe Game</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
   </head>
@@ -21,12 +21,12 @@
     </header>
     <main>
       <section id="home">
-        <h1>Welcome to Roblox Game</h1>
-        <p>Experience the ultimate gaming</p>
+        <h1>Welcome to Roblox Vibe Game</h1>
+        <p>Experience the ultimate gaming vibe</p>
         <button id="startGame">Start Game</button>
       </section>
       <section id="game">
-        <canvas id="gameCanvas"></canvas>
+        <canvas id="gameCanvas" width="800" height="600"></canvas>
       </section>
       <section id="about">
         <h2>About Us</h2>
